--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "prisma": "^5.20.0",
-    "tsx": "^4.19.0",
-    "next": "^14.2.0",
-    "next-intl": "^3.22.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.5.0"
+    "fuse.js": "^7.1.0",
+    "next": "^14.2.0",
+    "next-intl": "^3.22.0",
+    "prisma": "^5.20.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "tailwind-merge": "^2.5.0",
+    "tsx": "^4.19.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
